--- a/bio-page/bio.html
+++ b/bio-page/bio.html
@@ -15,15 +15,15 @@
         <nav class="nav">
             <a href="../landing-page/index.html">Home /</a>
             <a href="../experience-page/experience.html">Experience /</a>
-            <a href="../portfolio-page/portfolio.html">Projects</a>
+            <a href="../portfolio-page/portfolio.html">portfolio</a>
         </nav>
     </header>
     <main>
         <div class="bio_heading">
-            <h1>Bio page</h1>
+            <h1>My Bio Page</h1>
         </div>
         <div class="bio">
-            <img src="../Resources/mail-logo.png" alt="Author" class="author">
+            <img src="../Resources/elizeu-dias-2EGNqazbAMk-unsplash.jpg" alt="Author" class="author">
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid illo natus placeat unde earum debitis incidunt eius enim, excepturi eaque minima itaque facere minus quidem, nobis sit labore fugit vitae animi quibusdam velit consectetur. Adipisci earum officiis incidunt deleniti eaque at. Mollitia maiores itaque a odio id commodi incidunt officia eaque illum. Quibusdam, voluptates? Nostrum voluptatibus vel, laboriosam illum doloremque amet minus adipisci ea? Velit deleniti sequi aspernatur aliquid facilis reprehenderit voluptatum possimus. Ea amet ullam assumenda quidem debitis eveniet ipsum, nostrum distinctio nisi excepturi totam quod omnis molestias? Facere sapiente illo expedita, veniam totam inventore animi accusamus sint.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aliquid illo natus placeat unde earum debitis incidunt eius enim, excepturi eaque minima itaque facere minus quidem, nobis sit labore fugit vitae animi quibusdam velit consectetur. Adipisci earum officiis incidunt deleniti eaque at. Mollitia maiores itaque a odio id commodi incidunt officia eaque illum. Quibusdam, voluptates? Nostrum voluptatibus vel, laboriosam illum doloremque amet minus adipisci ea? Velit deleniti sequi aspernatur aliquid facilis reprehenderit voluptatum possimus. Ea amet ullam assumenda quidem debitis eveniet ipsum, nostrum distinctio nisi excepturi totam quod omnis molestias? Facere sapiente illo expedita, veniam totam inventore animi accusamus sint.</p>
