--- a/bio-page/bio.html
+++ b/bio-page/bio.html
@@ -13,7 +13,7 @@
             <a href="mailto:clement.ndimuangu@verizon.com">clement.ndimuangu@verizon.com</a>
         </div>
         <nav class="nav">
-            <a href="../landing-page/index.html">Home /</a>
+            <a href="../index.html">Home /</a>
             <a href="../experience-page/experience.html">Experience /</a>
             <a href="../portfolio-page/portfolio.html">portfolio</a>
         </nav>
